--- a/templates/index.html
+++ b/templates/index.html
@@ -10,16 +10,16 @@
 
 
 	<body>
-		<header id="header" class="">
+		<header>
 			
-		</header><!-- /header -->
+		</header>
 
 		<main>
 			{% block content %} 
 
 				
-			    {% for page in paginator.pages %}
-                    {{ page.title }}
+		{% for page in paginator.pages %}
+		<a href="{{ page.permalink }}">{{ page.title }}</a>
                 {% endfor %}
 
 			{% endblock %}
